--- a/about.html
+++ b/about.html
@@ -26,10 +26,13 @@
                       <a class="nav-link" href="designs.html">Designs</a>
                     </li>
                     <li class="nav-item">
-                      <a href="nav-link" href="sign-in.html">Sign In</a>
+                      <a class="nav-link" href="sign-in.html">Sign In</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                     <div class="spinner-grow text-danger" role="status">
                       <span class="sr-only">Loading...</span>
