--- a/login.html
+++ b/login.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link" href="login.html">Login</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
           <div class="spinner-grow text-danger" role="status">
             <span class="sr-only">Loading...</span>
           </div>
